Issue #0300: added scrollbar to preferences navigator

--- a/DSLAMAll/DSLAMFront/src/main/webapp/css/DSLAMDesktopModule.css
+++ b/DSLAMAll/DSLAMFront/src/main/webapp/css/DSLAMDesktopModule.css
@@ -173,6 +173,10 @@
 	margin-right: -8px;
 }
 
+.dslam_studio-preferencesLayout-menu {
+	width: 100%;
+}
+
 .dslam_studio-preferencesLayout-menuZone {
 	padding-right: 0px;
 	padding-left: 0px;
